[package]
name = "pong-rs"
version = "0.1.0"
authors = ["Justin Sacbibit <jsacbibit@gmail.com>",
           "Alexander von Franz <allrex@aries.uberspace.de>"]

[[bin]]
name = "pong-rs"

[dependencies]
piston = "0.16.0"
piston2d-graphics = "0.11.0"
pistoncore-glutin_window = "0.19.0"
piston2d-opengl_graphics = "0.20.0"
